--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud-task.version>2.2.3.RELEASE</spring-cloud-task.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-task-dependencies</artifactId>
+                <version>${spring-cloud-task.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
