--- a/spring-cloud-client-4/pom.xml
+++ b/spring-cloud-client-4/pom.xml
@@ -14,7 +14,14 @@
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-task</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-task-core</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
