--- a/spring-cloud-client-4/src/main/resources/application.yml
+++ b/spring-cloud-client-4/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8184
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/cloud_task?serverTimezone=UTC
+    username: root
+    password:
+  jpa:
+    hibernate:
+      #does not work
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
