--- a/spring-cloud-client-4/pom.xml
+++ b/spring-cloud-client-4/pom.xml
@@ -31,6 +31,15 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<!--below dependencies are added for executing Spring Batch Job as a Task-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-task-batch</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
