--- a/spring-cloud-client-4/src/main/resources/application.yml
+++ b/spring-cloud-client-4/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+  #enables spring batch for init schemas, obviously
+  batch:
+    initialize-schema: always
